--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,11 @@
 }
 
 .home,
+.portfolios,
 .services,
-.products,
-.sign-up {
+.sign-up,
+.search,
+.contact {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -16,8 +18,8 @@
   font-size: 3rem;
 }
 
-.services {
-  background-image: url('../public/images/img-2.jpg');
+.portfolios {
+  background-image: url('./images/img-2b.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,8 +27,8 @@
   font-size: 100px;
 }
 
-.products {
-  background-image: url('../public/images/img-1.jpg');
+.services {
+  background-image: url('./images/img-2b.jpg');
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -35,7 +37,7 @@
 }
 
 .sign-up {
-  background-image: url('../public/images/img-8.jpg');
+  background-image: url('./images/img-2b.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
