--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,38 +1,50 @@
-video {
+/*video {
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
-}
+} */
 
 .hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-  height: 100vh;
+  background: url('/images/img-home1.jpg') center center/cover no-repeat;
+  height: 60vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: left;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
 }
 
 .hero-container > h1 {
   color: #fff;
-  font-size: 100px;
+  font-size: 25px;
   margin-top: -100px;
 }
 
 .hero-container > p {
   margin-top: 8px;
   color: #fff;
-  font-size: 32px;
+  font-size: 20px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+      'Lucida Sans', Arial, sans-serif;
 }
 
-.hero-btns {
+h4{
+  margin-top: 7px;
+  margin-left: 20px;
+  color:#fff;
+}
+
+h5{
+  margin-top: 7px;
+  margin-left: 20px;
+  color:#fff;
+}
+
+/*.hero-btns {
   margin-top: 32px;
 }
 
@@ -43,25 +55,28 @@ video {
 .fa-play-circle {
   margin-left: 4px;
 }
-
+*/
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
-    font-size: 70px;
+    font-size: 50px;
+    height: 30vh;
     margin-top: -150px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
-    font-size: 50px;
+    font-size: 20px;
+    height: 30vh;
     margin-top: -100px;
   }
 
   .hero-container > p {
-    font-size: 30px;
+    font-size: 10px;
+    height: 30vh;
   }
 
-  .btn-mobile {
+  /*.btn-mobile {
     display: block;
     text-decoration: none;
   }
@@ -69,4 +84,5 @@ video {
   .btn {
     width: 100%;
   }
+*/
 }
