--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: linear-gradient(90deg, rgb(247, 244, 244) 0%, rgb(26, 26, 23) 100%);
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
   position: sticky;
   top: 0;
   z-index: 999;
@@ -21,7 +21,7 @@
 .navbar-logo {
   color: #fff;
   justify-self: start;
-  margin-left: 20px;
+  margin-left: 10px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
@@ -29,11 +29,11 @@
   align-items: center;
 }
 
-.fa-typo3 {
+/*.fa-typo3 {
   margin-left: 0.5rem;
   font-size: 1.8rem;
 }
-
+*/
 .nav-menu {
   display: grid;
   grid-template-columns: repeat(4, auto);
@@ -46,6 +46,14 @@
 }
 
 .nav-item {
+  height: 80px;
+}
+
+.nav-item-search {
+  height: 80px;
+}
+
+.nav-item-contact {
   height: 80px;
 }
 
@@ -117,7 +125,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    transform: translate(25%, 10%);
+
   }
 
   .menu-icon {
