--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,7 +7,7 @@
 } */
 
 .hero-container {
-  background: url('/images/img-home1.jpg') center center/cover no-repeat;
+  background: url('/public/images/img-home1.jpg') center center/cover no-repeat;
   height: 60vh;
   width: 100%;
   display: flex;
