--- a/src/components/pages/home/components/Banner.css
+++ b/src/components/pages/home/components/Banner.css
@@ -20,7 +20,7 @@
     margin-bottom: 5px;
     margin-left: 25px;
     color: #fff;
-    font-size: 15px;
+    font-size: 1rem;
     font-family: sans-serif;
     font-weight: lighter;
   }
@@ -29,7 +29,7 @@
     text-align: left;
     margin-left: 25px;
     margin-bottom: 5px;
-    font-size: 10px;
+    font-size: 0.5rem;
     font-family: sans-serif
   }
   .banner-titles{
@@ -50,7 +50,7 @@
     margin-top: 15px;
     margin-bottom: 10px;
     justify-content: flex-start;
-    font-size: 10px;
+    font-size: 0.7rem;
     font-weight: lighter;
     font-family: sans-serif;
     
@@ -67,8 +67,8 @@
   }
   .header-others{
     justify-content: center;
-    margin-left: 100px;
-    font-size: 10px;
+    margin-left: 90px;
+    font-size: 0.7rem;
     font-weight: lighter;
     font-family: sans-serif;
     margin-top: 15px;
