--- a/src/components/pages/home/components/Banner.css
+++ b/src/components/pages/home/components/Banner.css
@@ -76,26 +76,27 @@
   }
 
 /*table*/
-.table-container{
+/*.table-container{
   box-sizing: border-box;
   margin-top: 30px;
   padding: 10px;
   align-items: center;
   
-}
+}*/
 .table{
   align-items: center;
 	border-collapse: collapse;
-  margin-bottom: 70px;
-  margin-left: 20px;
-  
+  margin-bottom: 50px;
+  border-spacing: 0;
+  width: 100%;
+  padding: 10px;
+ 
 }
 
 .table td,.table th{
   padding:5px 5px;
   text-align: center;
   font-size: 0.5rem;
-  box-sizing: border-box;
 }
 
 .table th{
@@ -112,22 +113,8 @@
   color: #f88707;
 }
 
-.table tbody tr:nth-child(even){
-	background-color: #f5f5f5;
-    
-}
-
-
 
 /*responsive*/
-@media(max-width: 768px){
-  .table-container{
-  max-width: 768px;
-  }
-  
-}
-
-
 @media(max-width: 100px){
     .header{
       display: flex;
@@ -148,35 +135,4 @@
       margin-bottom: 5px;
       margin-right: 5px;
     }
-    .table-container{
-      max-width: 500px;
-      }
-     
-  .table thead{
-		display: none;
-	}
-
-	.table, .table tbody, .table tr, .table td{
-		display: block;
-		width: 100%;
-	}
-	.table tr{
-		margin-bottom:15px;
-	}
-	.table td{
-		text-align: right;
-		padding-left: 50%;
-		text-align: right;
-		position: relative;
-	}
-	.table td::before{
-		content: attr(data-label);
-		position: absolute;
-		left:0;
-		width: 50%;
-		padding-left:15px;
-		font-size:15px;
-		font-weight: bold;
-		text-align: left;
-	}
 }
