--- a/src/components/pages/home/components/Banner.css
+++ b/src/components/pages/home/components/Banner.css
@@ -13,6 +13,10 @@
     color: #fff;
     display: flex;
     flex-wrap: wrap;
+    max-width: ;
+  }
+  .header.hea{
+
   }
   .welcome {
     text-align: left;
