--- a/src/components/pages/general-components/Navbar.css
+++ b/src/components/pages/general-components/Navbar.css
@@ -1,4 +1,86 @@
-.navbar {
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background: linear-gradient(10deg, rgb(247, 244, 244) 20%, rgb(26, 26, 23) 100%);
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #070707;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.topnav a:hover {
+  color: rgb(253, 253, 253);
+  border-bottom: 4px solid #fff;
+  transition: all 0.2s ease-out;
+}
+.topnav .icon {
+  display: none;
+}
+
+
+.nav-menu {
+  display: flex;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 60vw;
+  justify-content: end;
+  margin-right: 2rem; 
+}
+.fa-bars {
+  color: #fff;
+}
+.nav-items-sign{
+  display: none;
+}
+.menu-icon {
+  display: none;
+}
+
+
+
+@media screen and (max-width: 680px) {
+  .topnav a:not(:first-child) {
+    display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+@media screen and (max-width: 680px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .navlogo{
+    height: 130;
+    width: 50;
+  }
+}
+
+/*.navbar {
   background: rgb(250, 249, 249);
   height: 80px;
   display: flex;
@@ -27,19 +109,6 @@
   align-items: center;
 }
 
-
-
-/* VER */
-.nav-menu {
-  display: flex;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
-  list-style: none;
-  text-align: center;
-  width: 60vw;
-  justify-content: end;
-  flex-wrap: wrap;  
-}
 
 
 .menu-menu{
@@ -165,4 +234,4 @@
     color: #242424;
     transition: 250ms;
   }
-}
+}*/
