--- a/src/components/pages/general-components/Footer.css
+++ b/src/components/pages/general-components/Footer.css
@@ -5,170 +5,68 @@
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-
+  
 }
 .footer-links{
   display: flex;
-  width: 100%;
-  max-width: 1000px;
   justify-content: center;
-  
+  border-top: 0.3px solid grey;
 }
 .footer-link-wrapper{
   display: flex;
-  flex-wrap: wrap;
-  padding: 5px;
   justify-content: space-around;
-  
 }
-h5{
-  padding: 10px;
-  
-}
-.footer-link-items-column{
-  font-size: 10px;
-  
-}
-.footer-link-items-redes{
+.footer-link-items, .footer-link-items-redes {
   display: flex;
+  flex-direction: column;
+  padding: 25px;
+  font-size: 15px;
 }
 li {
   display: flex;
   flex-wrap: wrap;
   color: white;
-}
-.footer-link-items {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 16px;
-  text-align: left;
-  width: 160px;
-  box-sizing: border-box;
+  margin-right: 10px;
 }
 
-.footer-link-items h2 {
-  margin-bottom: 16px;
-}
-
-.footer-link-items > h2 {
-  color: #fff;
-}
-
-.footer-link-items a {
+a {
   color: #fff;
   text-decoration: none;
-  margin-bottom: 0.5rem;
 }
-
-.footer-link-items a:hover {
-  color: #e9e9e9;
-  transition: 0.3s ease-out;
+.footer-link-items-redes a {
+  color: #fff;
+  text-decoration: none;
 }
-
-.footer-email-form h2 {
-  margin-bottom: 2rem;
-}
-
-.footer-input::placeholder {
-  color: #b1b1b1;
-}
-
-/* Social Icons */
 .social-icon-link {
   color: #fff;
-  font-size: 24px;
-}
-
-.social-media {
-  max-width: 1000px;
-  width: 100%;
-}
-
-.social-media-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
-  max-width: 1000px;
-  margin: 40px auto 0 auto;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 240px;
-}
-
-.social-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  margin-bottom: 16px;
-}
-
-.website-rights {
-  color: #fff;
-  margin-bottom: 16px;
-} 
-.medio {
-  display: flex;
-  margin-top: 0.3px solid grey;
 }
 .copyright-links{
   display: flex;
-  color: #fff;
+  border-top: 0.3px solid grey;
 }
-.footer-nav{
-  display: flex;
-}
+
 .flex{
   display: flex;
   color: white;
+  font-size: 12px;
 }
+
 .disclaimer{
   font-size: 10px;
-  align-items: flex-start;
-  justify-content: left;
-  display: inline;
-}
-p{
-  align-items: flex-start;
-  justify-content: left;
-}
-/*
-@media screen and (max-width: 820px) {
-  .footer-links {
-    padding-top: 2rem;
-  }
-
-  .footer-input {
-    width: 100%;
-  }
-
-  .btn {
-    width: 100%;
-  }
-
-  .footer-link-wrapper {
-    flex-direction: column;
-  }
-
-  .social-media-wrap {
-    flex-direction: column;
-  }
+  border-top: 0.3px solid grey;
+  padding-left: 10px;
 }
 
-@media screen and (max-width: 768px) {
-  
+
+@media screen and (max-width: 600px) {
+.copyright-links{
+  display: block;
 }
-*/
+
+.flex{
+  display: block;
+}
+.footer-link-wrapper{
+  display: block;
+}
+}
