--- a/src/components/pages/general-components/Navbar.css
+++ b/src/components/pages/general-components/Navbar.css
@@ -17,9 +17,9 @@ body {
   display: block;
   color: #070707;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 16px 0px 20px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 .topnav a:hover {
@@ -68,6 +68,7 @@ body {
     position: absolute;
     right: 0;
     top: 0;
+    
   }
   .topnav.responsive a {
     float: none;
