--- a/src/components/pages/general-components/Footer.css
+++ b/src/components/pages/general-components/Footer.css
@@ -20,8 +20,19 @@
   display: flex;
   flex-direction: column;
   padding: 25px;
+  font-size: 17px;
+}
+
+.footer-link-items h5 {
+  font-size: 17px;
+}
+.footer-link-items-redes h5{
+  font-size: 17px;
+}
+.footer-link-items p {
   font-size: 15px;
 }
+
 li {
   display: flex;
   flex-wrap: wrap;
@@ -48,7 +59,7 @@ a {
 .flex{
   display: flex;
   color: white;
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .disclaimer{
@@ -56,7 +67,10 @@ a {
   border-top: 0.3px solid grey;
   padding-left: 10px;
 }
-
+.color-orange {
+  color: orange;
+  
+}
 
 @media screen and (max-width: 600px) {
 .copyright-links{
