--- a/src/components/pages/general-components/Footer.css
+++ b/src/components/pages/general-components/Footer.css
@@ -1,3 +1,6 @@
+.footer{
+  box-sizing: border-box;
+}
 .footer-container{
   box-sizing: border-box;
   color: #fff;
@@ -5,27 +8,24 @@
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
-  
 }
 .footer-links{
   display: flex;
   justify-content: center;
   border-top: 0.3px solid grey;
 }
-.footer-link-wrapper{
-  display: flex;
-  justify-content: space-around;
-}
+
 .footer-link-items, .footer-link-items-redes {
   display: flex;
+  margin-left: 10px;
   flex-direction: column;
-  padding: 25px;
   font-size: 17px;
 }
 
 .footer-link-items h5 {
   font-size: 17px;
 }
+
 .footer-link-items-redes h5{
   font-size: 17px;
 }
@@ -63,6 +63,7 @@ a {
 }
 
 .disclaimer{
+  color: #bbb6b6;
   font-size: 10px;
   border-top: 0.3px solid grey;
   padding-left: 10px;
