--- a/src/components/pages/general-components/Navbar.css
+++ b/src/components/pages/general-components/Navbar.css
@@ -2,30 +2,38 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
 .topnav {
   overflow: hidden;
+  display: block;
   background: linear-gradient(10deg, rgb(247, 244, 244) 20%, rgb(26, 26, 23) 100%);
   position: sticky;
   top: 0;
   z-index: 999;
-  
 }
-
-.topnav a {
+.nav-items {
   float: left;
   display: block;
   color: #070707;
   text-align: center;
-  padding: 14px 16px 0px 20px;
+  margin:  14px 16px 0px 20px;
   text-decoration: none;
-  font-size: 12px;
+  font-size: 1rem;
 }
-
-.topnav a:hover {
+.nav-items:hover {
   color: rgb(253, 253, 253);
   border-bottom: 4px solid #fff;
   transition: all 0.2s ease-out;
+}
+.nav-items-sign{
+  float: right;
+  display: block;
+  margin:  14px 16px 0px 20px;
+  text-decoration: none;
+  font-size: 1rem;
+  
+}
+.navbar-items-logo{
+  float: left;
 }
 .topnav .icon {
   display: none;
@@ -45,16 +53,14 @@ body {
 .fa-bars {
   color: #fff;
 }
-.nav-items-sign{
-  display: none;
-}
+
 .menu-icon {
   display: none;
 }
 
 
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 660px) {
   .topnav a:not(:first-child) {
     display: none;}
   .topnav a.icon {
@@ -62,7 +68,7 @@ body {
     display: block;
   }
 }
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 660px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -80,159 +86,3 @@ body {
     width: 50;
   }
 }
-
-/*.navbar {
-  background: rgb(250, 249, 249);
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-  position: sticky;
-  top: 0;
-  z-index: 999;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-  flex-wrap: wrap;
-  
-}
-.logo-logo{
-  justify-self: start;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-}
-
-
-
-.menu-menu{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.nav-item {
-  height: 80px;
-}
-
-.nav-item-search {
-  height: 80px;
-}
-
-.nav-item-contact {
-  height: 80px;
-}
-
-.nav-links {
-  color: #fff;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  padding: 0.5rem 1rem;
-  height: 100%;
-}
-
-.nav-links:hover {
-  border-bottom: 4px solid #fff;
-  transition: all 0.2s ease-out;
-}
-
-.fa-bars {
-  color: #fff;
-}
-
-.nav-links-mobile {
-  display: none;
-}
-
-.menu-icon {
-  display: none;
-}
-
-@media screen and (max-width: 960px) {
-  .NavbarItems {
-    position: relative;
-  }
-
-  .nav-menu {
-    display: flex;
-    flex-direction: column;
-    height: 90vh;
-    position: absolute;
-    top: 80px;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-  }
-
-  .nav-menu.active {
-    background: #242222;
-    left: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-  }
-
-  .nav-links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-
-  .nav-links:hover {
-    background-color: #fff;
-    color: #242424;
-    border-radius: 0;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 10%);
-
-  }
-
-  .menu-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
-    cursor: pointer;
-  }
-
-  .fa-times {
-    color: #fff;
-    font-size: 2rem;
-  }
-
-  .nav-links-mobile {
-    display: block;
-    text-align: center;
-    margin: 2rem auto;
-    border-radius: 4px;
-    width: 80%;
-    text-decoration: none;
-    font-size: 1.5rem;
-    background-color: transparent;
-    color: #fff;
-    padding: 14px 20px;
-    border: 1px solid #fff;
-    transition: all 0.3s ease-out;
-  }
-
-  .nav-links-mobile:hover {
-    background: #fff;
-    color: #242424;
-    transition: 250ms;
-  }
-}*/
