--- a/src/components/pages/home/components/Banner.css
+++ b/src/components/pages/home/components/Banner.css
@@ -1,111 +1,89 @@
 .container{
   box-sizing: border-box;
-    background-color: #313131;
-    color: #fff;
-    display: flex;
-    flex-wrap: wrap;
-
+  background-color: #313131;
+  color: #fff;
+  flex-wrap: wrap;
 }
-
 .header {
     box-sizing: border-box;
     background-color: #313131;
     color: #fff;
-    display: flex;
-    flex-wrap: wrap;
-    max-width: ;
-  }
-  .header.hea{
+}
+.header.hea{
 
-  }
-  .welcome {
-    text-align: left;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    margin-left: 25px;
-    color: #fff;
-    font-size: 1rem;
-    font-family: sans-serif;
-    font-weight: lighter;
-  }
-  .headerp {
-    color: #fff;
-    text-align: left;
-    margin-left: 25px;
-    margin-bottom: 5px;
-    font-size: 0.5rem;
-    font-family: sans-serif
-  }
-  .banner-titles{
-    display: flex;
-    box-sizing: border-box;
-    justify-content: flex-start;
-    
-  }
-  .banner-titles-portfolio{
-    padding: 15px;
-    border-left: 5px solid orange;
-   border-radius: 5px;
-   margin-left: 10px;
-  }
-  .header-portfolio{
-    color: #fff;
-    margin-left: 15px;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    justify-content: flex-start;
-    font-size: 0.7rem;
-    font-weight: lighter;
-    font-family: sans-serif;
-    
-  }
-  .banner-titles-others{
-    border-color: black;
-    border-radius: 5px;
-    background-color: black;
-    color: #fff;
-    display: flex;
-    padding: 10px;
-    justify-content: space-around;
-    
-  }
-  .header-others{
-    justify-content: center;
-    margin-left: 90px;
-    font-size: 0.7rem;
-    font-weight: lighter;
-    font-family: sans-serif;
-    margin-top: 15px;
-    
-  }
+}
+.welcome {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  margin-left: 25px;
+  font-size: 1rem;
+  font-family: sans-serif;
+  font-weight: lighter;
+}
+.headerp {
+  margin-left: 25px;
+  margin-bottom: 5px;
+  font-size: 0.6rem;
+  font-family: sans-serif;
+  font-weight: lighter;
+}
 
-/*table*/
-/*.table-container{
+/*dropdown menu*/
+.banner-titles{
+  display: flex;
   box-sizing: border-box;
-  margin-top: 30px;
+  justify-content: flex-start;
+}
+.banner-titles-portfolio{
+  padding: 15px;
+  border-left: 5px solid orange;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+.header-portfolio{
+  color: #fff;
+  margin-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  justify-content: flex-start;
+  font-size: 0.7rem;
+  font-weight: lighter;
+  font-family: sans-serif;
+}
+.banner-titles-others{
+  border-color: black;
+  border-radius: 5px;
+  background-color: black;
+  color: #fff;
+  display: flex;
   padding: 10px;
-  align-items: center;
-  
-}*/
+  justify-content: space-around;
+}
+.header-others{
+  justify-content: center;
+  margin-left: 90px;
+  font-size: 0.7rem;
+  font-weight: lighter;
+  font-family: sans-serif;
+  margin-top: 15px;
+}
+
+
+/*Table*/
 .table{
   align-items: center;
 	border-collapse: collapse;
   margin-bottom: 50px;
   border-spacing: 0;
-  width: 100%;
-  padding: 10px;
- 
+  margin-left: 50px;
 }
-
 .table td,.table th{
   padding:5px 5px;
   text-align: center;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
 }
-
 .table th{
 	color:#ffffff;
-    
 }
 .percentage{
   color: #26cf3c;
@@ -117,26 +95,7 @@
   color: #f88707;
 }
 
-
 /*responsive*/
-@media(max-width: 100px){
-    .header{
-      display: flex;
-      
-    }
-    .banner-titles-container{
-      padding: 5px;
-    }
-    .banner-titles-others{
-      padding: 5px;
-    }
-    .header-others{
-      margin-left: 10px;
-    }
-    .header-portfolio{
-      margin-left: 5px;
-      margin-top: 5px;
-      margin-bottom: 5px;
-      margin-right: 5px;
-    }
+@media(max-width: 700px){
+   
 }
