--- a/src/components/pages/home/components/Cards.css
+++ b/src/components/pages/home/components/Cards.css
@@ -1,119 +1,44 @@
 .cards {
   box-sizing: border-box;
   background: #fff;
-  flex-wrap: wrap;
-}
-
+  }
 .cards-description{
  border-bottom: 0.1px solid rgb(114, 110, 110);
+ color: rgb(61, 60, 60);
+ text-align: left;
+ border-left: 4px solid orange;
+ padding-left: 5px;
+ margin-left: 8px;
+font-size: 15px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-weight: lighter;
+}
+.cards__wrapper {
+display: flex;
+justify-content: space-around;
+margin-top: 20px;
+margin-bottom: 50px;
 }
 
-    .cards .cards-titles{
-      color: black;
-      text-align: left;
-      border-left: 4px solid orange;
-      padding: 5px;
-      margin-left: 8px;
-      font-size: 15px;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-weight: lighter;
-    }
-img{
-  padding: 8px;
-}
-    /*Top 5*/
-    .cards__container1 {
-      display: flex;
-      align-items: center;
-    }
-
-    .cards__wrapper1 {
-      display: flex;
-      
-    }
-
-      .cards__items1 {
-        display: flex;
-        padding: 8px;
-      }
-      
-    /*Latest Updates*/
-     
-    .cards__container2 {
-          display: flex;
-          align-items: center;
-         
-        }
-
-        .cards__wrapper2 {
-          display: flex;
-        }
-
-          .cards__item2 {
-            display: flex;
-            padding: 8px;
-          }
-          
-
-
-/*Latest Updates description*/
-/*.cards__item__link {
-  display: flex;
-  flex-flow: column;
-  box-shadow: 0 3px 5px rgba(56, 125, 255, 0.17);
-  -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  border-radius: 5px;
-  overflow: hidden;
-  text-decoration: none;
-}
-
-
-
-.cards__item__img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
-  max-height: 100%;
-  object-fit: cover;
-  transition: all 0.2s linear;
-}
-
-.cards__item__img:hover {
-  transform: scale(1.1);
-}
-
-.cards__item__info {
-  padding: 5px 20px 20px;
-}
-
-.cards__item__text {
-  color: #252e48;
-  font-size: 17px;
-  line-height: 15px;
-}
-*/
-
+/*video*/          
 .cards__items-video{
   position: relative;
-  width: 100%;
-  padding-bottom: 56.25%;
+  padding: 20%;
   height: 0;
-  align-items: center;
-  margin-bottom: 60px;
-}
+  }
 .cards__items-video iframe {
   position: absolute;
-  align-items: center;
   top: 0;
-  left: 200px;
+  left: 150px;
   width: 60%;
-  height:60%;
+  height: 60%;
 }
 
+@media screen and (max-width: 560px) {
+  .cards__wrapper {
+    display: block;
+  }
+  .cards__items-video iframe {
+    left: 20px;
+  }
+}
