--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
-*/:root{--font-family-sans-serif:"Nunito",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --font-family-monospace:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
+*/:root{
+    --font-family-sans-serif:"Nunito",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    --font-family-monospace:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace
+}
 *,::after,::before{
-    box-sizing:border-box}
+    box-sizing:border-box
+}
 html{
     font-family:sans-serif;
     line-height:1.15;
     -webkit-text-size-adjust:100%;
     -webkit-tap-highlight-color:transparent}
-article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}
+article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{
+    display:block
+}
 body{
     margin:0;
     font-family:Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
@@ -16,4 +21,46 @@ body{
     line-height:1.5;
     color:#858796;
     text-align:left;
-    background-color:#fff}
+    background-color:#fff
+}
+
+
+
+
+.home,
+.investmentportfolios,
+.moreservices,
+.sign-up {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+.investmentportfolios {
+  background-image: url('./images/img-2b.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 50px;
+}
+
+.moreservices {
+  background-image: url('./images/img-2b.jpg');
+  background-position: center;
+  background-size: fill;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 50px;
+}
+
+.sign-up {
+  background-image: url('./images/img-2b.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 50px;
+}
