--- a/src/components/pages/general-components/Button.css
+++ b/src/components/pages/general-components/Button.css
@@ -1,22 +1,18 @@
 :root {
   --primary: #fff;
 }
-
 .btn {
-  padding: 5px 8px;
   border-radius: 2px;
-  outline: none;
+  }
+/*padding: 5px 8px;
+outline: none;
   border: none;
-  cursor: pointer;
-
-}
-
+  cursor: pointer;*/
 .btn--primary {
   background-color: var(--primary);
   color: #242424;
   border: 1px solid var(--primary);
 }
-
 .btn--outline {
   background-color: transparent;
   color: #fff;
@@ -24,20 +20,14 @@
   border: 1px solid var(--primary);
   transition: all 0.3s ease-out;
 }
-
 .btn--medium {
   padding: 5px 8px;
-  font-size: 12px;
+  font-size: 15px;
 }
-
-
-
-
 .btn--large {
   padding: 10px 20px;
-  font-size: 12px;
+  font-size: 15px;
 }
-
 .btn--large:hover,
 .btn--medium:hover {
   transition: all 0.3s ease-out;
