--- a/src/components/pages/general-components/Footer.css
+++ b/src/components/pages/general-components/Footer.css
@@ -11,7 +11,7 @@
 }
 .footer-links{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   border-top: 0.3px solid grey;
 }
 
