--- a/src/components/pages/general-components/Navbar.css
+++ b/src/components/pages/general-components/Navbar.css
@@ -2,15 +2,66 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-.topnav {
-  overflow: hidden;
-  display: block;
+.navbar {
   background: linear-gradient(10deg, rgb(247, 244, 244) 20%, rgb(26, 26, 23) 100%);
+  height: 80px;
+  font-size: 1rem;
   position: sticky;
   top: 0;
   z-index: 999;
 }
-.nav-items {
+/*  display: flex;
+  justify-content: center;
+  align-items: center;
+*/
+.topnav{
+  display: flex;
+  align-items: center;
+  height: 80px;
+}
+/*max-width: 1500px;
+ justify-content: center;
+*/
+.nav-menu {
+  display: flex;
+  grid-gap: 5px;
+  text-align: center;
+}
+/*  
+grid-template-columns: repeat(4, auto);
+width: 60vw;
+margin-right: 2rem; 
+list-style: none;
+justify-content: end;
+
+.nav-item {
+  height: 80px;
+}*/
+.nav-links {
+  color: rgb(10, 10, 10);
+  text-decoration: none;
+  padding: 0.5rem 0.5rem;
+}
+/*display: flex;
+  align-items: center;
+  height: 100%;
+  */
+.nav-links:hover {
+  color: #fff;
+  border-bottom: 3px solid #fff;
+  transition: all 0.2s ease-out;
+}
+.fa-bars {
+  color: #fff;
+}
+.nav-links-sign {
+  display: none;
+}
+.menu-icon {
+  display: none;
+}
+
+/*.nav-links {
   float: left;
   display: block;
   color: #070707;
@@ -19,67 +70,101 @@ body {
   text-decoration: none;
   font-size: 1rem;
 }
-.nav-items:hover {
+.nav-links:hover {
   color: rgb(253, 253, 253);
   border-bottom: 4px solid #fff;
   transition: all 0.2s ease-out;
 }
-.nav-items-sign{
+.nav-links-sign{
   float: right;
   display: block;
   margin:  14px 16px 0px 20px;
   text-decoration: none;
   font-size: 1rem;
-  
 }
-.navbar-items-logo{
+*/
+/*.topnav {
+  overflow: hidden;
+  display: block;
+  background: linear-gradient(10deg, rgb(247, 244, 244) 20%, rgb(26, 26, 23) 100%);
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}*/
+
+/*.navbar-items-logo{
   float: left;
 }
 .topnav .icon {
   display: none;
-}
+}*/
 
 
-.nav-menu {
-  display: flex;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
-  list-style: none;
-  text-align: center;
-  width: 60vw;
-  justify-content: end;
-  margin-right: 2rem; 
-}
-.fa-bars {
-  color: #fff;
-}
-
-.menu-icon {
-  display: none;
-}
-
-
-
+/*.NavbarItems {
+    position: relative;
+  }*/
 @media screen and (max-width: 660px) {
-  .topnav a:not(:first-child) {
-    display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-@media screen and (max-width: 660px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     position: absolute;
-    right: 0;
-    top: 0;
-    
+    top: 80px;
+    transition: all 0.5s ease;
+    opacity: 1;
+    left: -100%;
+    height: 90vh;
   }
-  .topnav.responsive a {
-    float: none;
+  .nav-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+  .nav-links {
+    color: #fff;
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+  .nav-links:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+  }
+  .menu-icon {
     display: block;
-    text-align: left;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+  .fa-times {
+    color: #fff;
+    font-size: 2rem;
+  }
+  .nav-links-sign {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+  .nav-links-sign:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
   }
   .navlogo{
     height: 130;
